New achievement Miller (Level 6)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 402 points<br>
+Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 409 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -97,6 +97,7 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 170 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Miller (Level 5)</div>  <div class="info">Add only part of a file to the stage 204 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Miller (Level 6)</div>  <div class="info">Add only part of a file to the stage 270 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Presenter (Level 4)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Presenter (Level 5)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -114,47 +115,47 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  21680 rev-parse
-  10529 symbolic-ref
-   1605 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    718 st
-    657 lola
-    583 diff
-    545 checkout
+  25341 rev-parse
+  12410 symbolic-ref
+   1635 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    778 st
+    676 lola
+    633 diff
+    554 checkout
     288 log
     282 diff-index
-    242 commit
-    240 br
-    231 add
-    228 difftool
-    218 help
-    217 stash
-    215 --git-dir=.git
-    186 tag
-    167 push
-    123 merge
+    250 commit
+    249 difftool
+    245 add
+    243 br
+    232 help
+    220 --git-dir=.git
+    219 stash
+    191 tag
+    169 push
+    124 merge
      90 lol
-     84 branch
+     85 branch
      68 describe
      62 achievements
      54 rebase
      48 config
+     45 show
      43 ign
-     41 show
      23 ls-remote
      20 remote
+     20 clone
      18 fetch
-     18 clone
+     17 pull
      17 bundle
-     14 pull
      14 --git-dir=
      12 gc
      11 format-patch
      11 blame
       9 reflog
+      7 status
       7 reset
       7 fsck
-      6 status
       4 rm
       4 init
       3 for-each-ref
@@ -170,6 +171,7 @@ Git commands sorted by usage:
       1 ls-files
       1 annotate
       1 --help
+      1 --git-dir=/home/michiel/git/snap-ramp/.git
 </pre>
 <script type="text/javascript">
 function showLocked() {
