New achievement Cherry Picker

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 409 points<br>
+Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 410 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -76,6 +76,7 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Butcher (Level 5)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
+<li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -115,19 +116,19 @@ Unlocked 30/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  25341 rev-parse
-  12410 symbolic-ref
-   1635 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    778 st
-    676 lola
-    633 diff
-    554 checkout
+  25499 rev-parse
+  12489 symbolic-ref
+   1652 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    793 st
+    687 lola
+    643 diff
+    561 checkout
     288 log
     282 diff-index
-    250 commit
-    249 difftool
-    245 add
-    243 br
+    256 commit
+    252 add
+    251 difftool
+    246 br
     232 help
     220 --git-dir=.git
     219 stash
@@ -138,23 +139,23 @@ Git commands sorted by usage:
      85 branch
      68 describe
      62 achievements
-     54 rebase
+     56 rebase
      48 config
      45 show
      43 ign
      23 ls-remote
      20 remote
      20 clone
+     18 pull
      18 fetch
-     17 pull
      17 bundle
      14 --git-dir=
      12 gc
      11 format-patch
      11 blame
       9 reflog
+      8 reset
       7 status
-      7 reset
       7 fsck
       4 rm
       4 init
@@ -169,6 +170,7 @@ Git commands sorted by usage:
       2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       1 prune
       1 ls-files
+      1 cherry-pick
       1 annotate
       1 --help
       1 --git-dir=/home/michiel/git/snap-ramp/.git
@@ -188,7 +190,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Carpenter</div><div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Cathedral Architect</div><div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Cathedral Worker</div><div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
-<li><div class="title">Cherry Picker</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
