--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 410 points<br>
+Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 419 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -93,6 +93,7 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Gipsy (Level 7)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Master Historian (Level 8)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Master Product Manager (Level 8)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -116,30 +117,30 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  25499 rev-parse
-  12489 symbolic-ref
-   1652 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    793 st
-    687 lola
-    643 diff
-    561 checkout
+  26243 rev-parse
+  12862 symbolic-ref
+   1688 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    824 st
+    723 lola
+    669 diff
+    583 checkout
     288 log
     282 diff-index
-    256 commit
-    252 add
-    251 difftool
-    246 br
-    232 help
+    268 commit
+    259 add
+    258 difftool
+    258 br
+    236 help
+    221 stash
     220 --git-dir=.git
-    219 stash
-    191 tag
-    169 push
+    206 tag
+    171 push
     124 merge
      90 lol
-     85 branch
+     87 branch
      68 describe
      62 achievements
-     56 rebase
+     57 rebase
      48 config
      45 show
      43 ign
@@ -149,12 +150,12 @@ Git commands sorted by usage:
      18 pull
      18 fetch
      17 bundle
+     14 gc
      14 --git-dir=
-     12 gc
      11 format-patch
      11 blame
+      9 reset
       9 reflog
-      8 reset
       7 status
       7 fsck
       4 rm
