--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 419 points<br>
+Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 424 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -77,6 +77,7 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Butcher (Level 5)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
+<li><div class="title">Chimney Sweeper (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Delivery Boy (Level 4)</div>  <div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -117,30 +118,30 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  26243 rev-parse
-  12862 symbolic-ref
-   1688 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    824 st
-    723 lola
-    669 diff
+  26273 rev-parse
+  12877 symbolic-ref
+   1691 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    825 st
+    727 lola
+    670 diff
     583 checkout
     288 log
     282 diff-index
-    268 commit
+    269 commit
     259 add
     258 difftool
     258 br
-    236 help
-    221 stash
+    237 help
+    222 stash
     220 --git-dir=.git
-    206 tag
+    207 tag
     171 push
     124 merge
      90 lol
      87 branch
      68 describe
      62 achievements
-     57 rebase
+     59 rebase
      48 config
      45 show
      43 ign
@@ -150,7 +151,7 @@ Git commands sorted by usage:
      18 pull
      18 fetch
      17 bundle
-     14 gc
+     15 gc
      14 --git-dir=
      11 format-patch
      11 blame
