New achievement Master Author (Level 9)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 424 points<br>
+Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 434 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -90,6 +90,7 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div>  <div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Master Gipsy (Level 7)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -118,18 +119,18 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  26273 rev-parse
-  12877 symbolic-ref
-   1691 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    825 st
-    727 lola
-    670 diff
+  26305 rev-parse
+  12893 symbolic-ref
+   1692 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    826 st
+    731 lola
+    673 diff
     583 checkout
     288 log
     282 diff-index
-    269 commit
+    271 commit
+    259 difftool
     259 add
-    258 difftool
     258 br
     237 help
     222 stash
@@ -141,7 +142,7 @@ Git commands sorted by usage:
      87 branch
      68 describe
      62 achievements
-     59 rebase
+     60 rebase
      48 config
      45 show
      43 ign
