--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 434 points<br>
+Unlocked 32/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 436 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -46,6 +46,7 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Investigator (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Investigator (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
 <li><div class="title">Apprentice Investigator (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-blame.html">git-blame</a> to annotate a file with information about how each line changed.</div></li>
+<li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Miller (Level 1)</div>  <div class="info">Add only part of a file to the stage 9 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 2)</div>  <div class="info">Add only part of a file to the stage 23 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 130 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
@@ -119,50 +120,51 @@ Unlocked 31/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  26305 rev-parse
-  12893 symbolic-ref
-   1692 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    826 st
-    731 lola
-    673 diff
-    583 checkout
-    288 log
+  28562 rev-parse
+  13981 symbolic-ref
+   1805 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    901 st
+    897 lola
+    744 diff
+    619 checkout
+    320 commit
+    294 difftool
+    292 log
+    291 add
     282 diff-index
-    271 commit
-    259 difftool
-    259 add
-    258 br
-    237 help
-    222 stash
-    220 --git-dir=.git
-    207 tag
-    171 push
-    124 merge
+    269 br
+    261 tag
+    256 help
+    225 stash
+    224 --git-dir=.git
+    178 push
+    128 merge
      90 lol
      87 branch
+     78 rebase
      68 describe
      62 achievements
-     60 rebase
-     48 config
+     50 config
      45 show
      43 ign
      23 ls-remote
-     20 remote
-     20 clone
+     23 gc
+     22 clone
+     21 remote
+     19 bundle
      18 pull
      18 fetch
-     17 bundle
-     15 gc
      14 --git-dir=
+     11 reset
      11 format-patch
      11 blame
-      9 reset
       9 reflog
-      7 status
+      8 status
       7 fsck
-      4 rm
-      4 init
+      5 rm
+      5 init
       3 for-each-ref
+      3 --version
       2 whatchanged
       2 show-branch
       2 revert
@@ -198,7 +200,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
 <li><div class="title">Librarian</div><div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Locksmith</div><div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
-<li><div class="title">Merchant</div><div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
 <li><div class="title">Plumber</div><div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
