--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 34/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 449 points<br>
+Unlocked 34/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 456 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -113,6 +113,7 @@ Unlocked 34/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Seamstress (Level 5)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Seamstress (Level 6)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -124,32 +125,32 @@ Unlocked 34/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  30536 rev-parse
-  14908 symbolic-ref
-   1899 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    962 lola
-    942 st
-    819 diff
-    665 checkout
-    366 commit
-    316 difftool
-    306 add
-    297 log
-    288 tag
-    286 br
+  31012 rev-parse
+  15143 symbolic-ref
+   1934 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+    972 lola
+    951 st
+    837 diff
+    677 checkout
+    376 commit
+    320 difftool
+    309 add
+    303 log
+    295 tag
+    294 br
+    290 help
     282 diff-index
-    281 help
     266 --git-dir=.git
-    231 stash
+    235 stash
     184 push
-    130 merge
+    134 merge
     105 describe
+     92 branch
      90 lol
-     90 branch
-     81 rebase
+     82 rebase
      66 config
      62 achievements
-     47 show
+     48 show
      43 ign
      27 gc
      23 ls-remote
@@ -159,11 +160,12 @@ Git commands sorted by usage:
      18 pull
      18 fetch
      14 --git-dir=
-     12 blame
+     13 blame
      11 reset
      11 format-patch
       9 reflog
       8 status
+      8 annotate
       7 instaweb
       7 fsck
       5 rm
@@ -176,7 +178,6 @@ Git commands sorted by usage:
       2 clean
       2 bisect
       2 apply
-      2 annotate
       2 am
       2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
       1 prune
