New achievement Master Blacksmith (Level 7)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 468 points<br>
+Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 476 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -98,6 +98,7 @@ Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Librarian</div>  <div class="info">Looked for change that introduce or remove a string with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -S</div></li>
 <li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Banker (Level 7)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Master Blacksmith (Level 7)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Gipsy (Level 7)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Master Gipsy (Level 9)</div>  <div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Master Historian (Level 7)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -127,51 +128,51 @@ Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  31371 rev-parse
-  15325 symbolic-ref
-   1940 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-    981 lola
-    957 st
-    846 diff
-    677 checkout
-    384 commit
-    322 difftool
-    314 add
-    311 tag
+  34534 rev-parse
+  16929 symbolic-ref
+   1994 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1077 lola
+   1024 st
+    929 diff
+    714 checkout
+    426 commit
+    396 --git-dir=.git
+    370 add
+    344 difftool
+    341 tag
+    322 help
+    307 br
     303 log
-    295 br
-    294 help
-    290 --git-dir=.git
     282 diff-index
     235 stash
-    188 push
-    134 merge
+    210 push
+    148 merge
     105 describe
-     92 branch
+     94 branch
+     91 rebase
      90 lol
-     82 rebase
-     67 config
+     71 config
      62 achievements
      48 show
      43 ign
+     27 remote
      27 gc
      23 ls-remote
-     22 remote
-     22 clone
+     23 clone
+     20 pull
      19 bundle
-     18 pull
      18 fetch
-     14 --git-dir=
+     15 --git-dir=
      13 blame
-     11 reset
+     12 reset
+     12 annotate
      11 format-patch
       9 reflog
+      9 instaweb
       8 status
-      8 instaweb
-      8 annotate
       7 fsck
-      5 rm
-      5 init
+      6 rm
+      6 init
       3 for-each-ref
       3 --version
       2 whatchanged
@@ -182,6 +183,7 @@ Git commands sorted by usage:
       2 apply
       2 am
       2 --git-dir=/home/michiel/SNaP/temp-checkout/snap-ramp/.git
+      2 --git-dir=.
       1 prune
       1 ls-files
       1 cherry-pick
