--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 476 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 478 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -52,6 +52,7 @@ Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Apprentice Miller (Level 3)</div>  <div class="info">Add only part of a file to the stage 130 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Apprentice News Reader (Level 1)</div>  <div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Apprentice Pilgrim (Level 1)</div>  <div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
+<li><div class="title">Apprentice Plumber (Level 1)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 3)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Product Manager (Level 1)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -128,32 +129,32 @@ Unlocked 35/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  34534 rev-parse
-  16929 symbolic-ref
-   1994 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-   1077 lola
-   1024 st
-    929 diff
-    714 checkout
-    426 commit
-    396 --git-dir=.git
-    370 add
-    344 difftool
-    341 tag
-    322 help
-    307 br
+  35228 rev-parse
+  17280 symbolic-ref
+   2017 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1110 lola
+   1051 st
+    947 diff
+    727 checkout
+    435 commit
+    420 --git-dir=.git
+    377 add
+    360 tag
+    350 difftool
+    331 help
+    315 br
     303 log
     282 diff-index
-    235 stash
-    210 push
-    148 merge
+    237 stash
+    214 push
+    150 merge
     105 describe
+     94 rebase
      94 branch
-     91 rebase
      90 lol
      71 config
      62 achievements
-     48 show
+     54 show
      43 ign
      27 remote
      27 gc
@@ -164,8 +165,8 @@ Git commands sorted by usage:
      18 fetch
      15 --git-dir=
      13 blame
+     13 annotate
      12 reset
-     12 annotate
      11 format-patch
       9 reflog
       9 instaweb
@@ -178,6 +179,7 @@ Git commands sorted by usage:
       2 whatchanged
       2 show-branch
       2 revert
+      2 hash-object
       2 clean
       2 bisect
       2 apply
@@ -187,6 +189,7 @@ Git commands sorted by usage:
       1 prune
       1 ls-files
       1 cherry-pick
+      1 cat-file
       1 --help
       1 --git-dir=/home/michiel/git/snap-ramp/.git
 </pre>
@@ -210,7 +213,6 @@ There are 50 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
 <li><div class="title">Locksmith</div><div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Messenger</div><div class="info">Applied a patch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-am.html">git-am</a>.</div></li>
-<li><div class="title">Plumber</div><div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
