New achievement Butcher (Level 6)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 493 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 500 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -80,6 +80,7 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Blacksmith (Level 6)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Butcher (Level 5)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
+<li><div class="title">Butcher (Level 6)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
 <li><div class="title">Chimney Sweeper (Level 4)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
@@ -131,29 +132,29 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  35374 rev-parse
-  17353 symbolic-ref
-   2017 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-   1110 lola
-   1051 st
-    947 diff
-    727 checkout
-    435 commit
-    420 --git-dir=.git
-    377 add
-    362 tag
-    350 difftool
-    331 help
-    315 br
+  36425 rev-parse
+  17847 symbolic-ref
+   2065 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1140 lola
+   1070 st
+    966 diff
+    756 checkout
+    443 commit
+    425 --git-dir=.git
+    385 tag
+    381 add
+    351 difftool
+    339 help
+    325 br
     303 log
     282 diff-index
     237 stash
-    215 push
-    150 merge
-    120 show
-    105 describe
-     94 rebase
-     94 branch
+    220 push
+    219 show
+    169 describe
+    152 merge
+     98 branch
+     95 rebase
      90 lol
      71 config
      62 achievements
@@ -165,9 +166,9 @@ Git commands sorted by usage:
      20 pull
      19 bundle
      18 fetch
+     17 annotate
      15 --git-dir=
      13 blame
-     13 annotate
      12 reset
      11 format-patch
       9 reflog
