New achievement Master Socialite (Level 8)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <h1>Michiel Verboven's Git Achievements</h1>
-Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 515 points<br>
+Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achievements</a> for 524 points<br>
 <ul>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Archivist (Level 3)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
@@ -110,6 +110,7 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 <li><div class="title">Master Presenter (Level 8)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Master Product Manager (Level 8)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 170 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
@@ -134,41 +135,41 @@ Unlocked 36/50 <a href="http://github.com/michiel007/git-achievements">Git Achie
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  40545 rev-parse
-  19841 symbolic-ref
-   2237 --git-dir=/home/michiel/SNaP/snap-ramp/.git
-   1302 lola
-   1162 st
-   1056 diff
-    830 checkout
-    499 commit
+  43394 rev-parse
+  21257 symbolic-ref
+   2329 --git-dir=/home/michiel/SNaP/snap-ramp/.git
+   1401 lola
+   1225 st
+   1116 diff
+    856 checkout
+    533 commit
+    503 tag
     471 --git-dir=.git
-    453 tag
-    392 add
-    389 difftool
-    372 help
-    358 br
+    409 difftool
+    407 add
+    388 help
+    376 br
     304 log
     282 diff-index
-    253 stash
-    251 describe
-    248 show
-    242 push
-    164 merge
+    267 describe
+    264 show
+    261 stash
+    255 push
+    170 merge
     108 rebase
     101 branch
-     90 lol
-     71 config
+     95 lol
+     72 config
      62 achievements
-     43 ign
-     30 gc
+     44 ign
+     35 gc
      29 remote
      23 ls-remote
      23 clone
      21 fetch
+     21 annotate
      20 pull
      19 bundle
-     18 annotate
      15 reset
      15 --git-dir=
      13 blame
